--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -242,7 +242,108 @@
   </div>
 </div>
 <!-- END PRODUCT DETAILS SECTION -->
+<!-- REVIEW SECTION -->
+<section id="reviews-section">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        {% if reviews %}
+        <h4>
+          {{ review_count }} Reviews for <strong>{{ product.name }}</strong>
+        </h4>
+        <hr />
+      </div>
+    </div>
+  </div>
 
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md-6">
+        {% for review in reviews %}
+        <div class="row mt-3">
+          <div class="col review-stars">
+            {% if review.rating == 5 %}
+            <i class="fa fa-solid fa-star"></i
+            ><i class="fa fa-solid fa-star"></i
+            ><i class="fa fa-solid fa-star"></i
+            ><i class="fa fa-solid fa-star"></i
+            ><i class="fa fa-solid fa-star"></i>
+            {% elif review.rating == 4 %}
+            <i class="fa fa-solid fa-star"></i
+            ><i class="fa fa-solid fa-star"></i>
+            <i class="fa fa-solid fa-star"></i
+            ><i class="fa fa-solid fa-star"></i>
+            <i class="fa fa-regular fa-star"></i>
+            {% elif review.rating == 3 %}
+            <i class="fa fa-solid fa-star"></i
+            ><i class="fa fa-solid fa-star"></i
+            ><i class="fa fa-solid fa-star"></i
+            ><i class="fa fa-regular fa-star"></i
+            ><i class="fa fa-regular fa-star"></i>
+            {% elif review.rating == 2 %}
+            <i class="fa fa-solid fa-star"></i
+            ><i class="fa fa-solid fa-star"></i
+            ><i class="fa fa-regular fa-star"></i
+            ><i class="fa fa-regular fa-star"></i
+            ><i class="fa fa-regular fa-star"></i>
+            {% elif review.rating == 1 %}
+            <i class="fa fa-solid fa-star"></i
+            ><i class="fa fa-regular fa-star"></i
+            ><i class="fa fa-regular fa-star"></i
+            ><i class="fa fa-regular fa-star"></i
+            ><i class="fa fa-regular fa-star"></i>
+            {% endif %}
+          </div>
+          <div>
+            <!-- User and admin edit btn -->
+            {% if review.user.user.id == user.id or request.user.is_superuser %}
+            <a
+              href="{% url 'edit_review' review.id %}#reviews-section"
+              aria-label="Edit review from {{ review.user }}"
+              class="text-secondary text-decoration-none"
+            >
+              <span class="icon mr-2">
+                <i class="fa-regular fa-pen-to-square"></i>
+              </span>
+            </a>
+            <a
+              class="text-danger text-decoration-none btn"
+              data-toggle="modal"
+              data-target="#reviewDeleteModal"
+              aria-label="Delete review from {{ review.user }}"
+            >
+              <span class="icon">
+                <i class="fa-regular fa-trash-can"></i>
+              </span>
+            </a>
+
+            {% include 'books/includes/delete_review_modal.html' %} {% endif %}
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            {{ review.body}}
+            <p class="small text-muted">
+              {{ review.user }} &#8226; {{review.created_on|timesince }}
+            </p>
+          </div>
+        </div>
+        {% endfor %} {% else %} {% if not edit %}
+        <div class="col-12 col-md-8 mx-auto">
+          <h5>This Watch has no reviews</h5>
+        </div>
+        {% endif %} {% endif %}
+      </div>
+
+      <!-- Add review -->
+      <div class="col-12 col-md-6">
+        <h4 class="text-center">Leave A Review</h4>
+        {% include 'products/includes/add_edit_review_forms.html' %}
+      </div>
+    </div>
+  </div>
+</section>
+<!-- END REVIEW SECTION -->
 <!-- PRODUCTS FEATURED CAROUSEL -->
 <!-- END PRODUCTS FEATURED CAROUSEL -->
 {% endblock %} {% block postloadjs %} {{ block.super }}
